fullScr responsive & overflow set alarm fixed

--- a/src/app/components/alarm-set/alarm-set.component.scss
+++ b/src/app/components/alarm-set/alarm-set.component.scss
@@ -15,8 +15,8 @@
     }
     &__input {
       text-align: center;
-      width: 3rem;
-      margin: 0 0.5rem;
+      width: 2.35rem;
+      margin: 0 0.5rem 0 0.2rem;
       border: solid 0.5px var(--greyHover);
     }
     &__h2 {
